testcases/malgo/error/ErrorKind3.mlg
module ErrorKind3 = {
  def f : a -> Int32#
  def f = { x -> 42# }

  def main = {
    f 43#;
    ()
  }
}
